improvement XPathBuilder.java